# amazon-sqs-messaging-provider

./: Cargo.toml  Makefile  README.md
src/: lib.rs  sqs.rs
