[package]
name = "amazon-sqs-messaging-provider"
version = "0.1.0"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
wascc-codec = "0.5.0"
rusoto_core = "0.43.0"
rusoto_sqs = "0.43.0"
tokio = { version = "0.2.13", features = ["macros"]}
